@@ -19,6 +19,9 @@ unsigned char b;
 unsigned char orsh (void)
 {
   unsigned char a, i;
+  unsigned char *p = &a;
+
+  a = *p; // to eliminate warnings by llvm
   for (i = 0; i < sizeof(ttt); i++)
     a |= ttt[i];
   return a;
@@ -28,6 +31,9 @@ unsigned char orsh1 (void)
 {
   unsigned char i, j;
   unsigned char a;
+  unsigned char *p = &a;
+
+  a = *p; // to eliminate warnings by llvm
   for (j = 0; j < sizeof(ttt); j++)
     {
       for (i = 0; i < sizeof(ttt); i++)
